--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,7 +25,7 @@
 
       {% if site.show_downloads %}
       <section id="downloads">
-        <a class="zip_download_link" href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/GS-GAME-WORDS/Dr.Xama---RPG-MAKER-MV/tree/master/plugins">Baixar todos os plugins em .zip</a>
+        <a class="zip_download_link" href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/GS-GAME-WORDS/Dr.Xama---RPG-MAKER-MV/tree/master/plugins" target="_blank">Baixar todos os plugins em .zip</a>
       </section>
       {% endif %}
     </header>
