--- a/docs/_sass/jekyll-theme-slate.scss
+++ b/docs/_sass/jekyll-theme-slate.scss
@@ -327,7 +327,8 @@ Full-Width Styles
   height:70px;
   text-indent: -5000px;
   overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom left;
+  background: url(../images/sprite_download.png) no-repeat bottom right;
+  margin-left: 10px;
 }
 
 .zip_download_link:hover {
